--- a/Components/Pages/SequenceEquals.razor
+++ b/Components/Pages/SequenceEquals.razor
@@ -7,34 +7,14 @@
             {
                 <Marble Color="marble.Color">@marble.Number</Marble>
             }
-            <Marble Color="@Color.Primary" Clicked="@(() => _showPopover1 = true)">
-                <span>+</span>
-                <MudPopover Open="@_showPopover1" AnchorOrigin="Origin.BottomRight">
-                    <div class="d-flex flex-column">
-                        <MudInput T="int" @bind-Value="@_number"
-                                  AdornmentIcon="@Icons.Material.Filled.Add"
-                                  Adornment="Adornment.Start"
-                                  OnAdornmentClick="AddNumberToFirstList"/>
-                    </div>
-                </MudPopover>
-            </Marble>
+            <AddMarble DefaultContent="5" OnAdd="AddNumberToFirstList" T="int" />
         </div>
         <div class="array">
             @foreach (var marble in _marbles2)
             {
                 <Marble Color="marble.Color">@marble.Number</Marble>
             }
-            <Marble Color="@Color.Primary" Clicked="@(() => _showPopover2 = true)">
-                <span>+</span>
-                <MudPopover Open="@_showPopover2" AnchorOrigin="Origin.BottomRight">
-                    <div class="d-flex flex-column">
-                        <MudInput T="int" @bind-Value="@_number"
-                                  AdornmentIcon="@Icons.Material.Filled.Add"
-                                  Adornment="Adornment.Start"
-                                  OnAdornmentClick="AddNumberToSecondList"/>
-                    </div>
-                </MudPopover>
-            </Marble>
+            <AddMarble DefaultContent="5" OnAdd="AddNumberToSecondList" T="int" />
         </div>
     </InputPanel>
     <OutputPanel>
@@ -54,21 +34,13 @@
         new(1) { Color = Color.Secondary },
     };
 
-    private bool _showPopover1;
-    private bool _showPopover2;
-    private int _number = 3;
-
-    private void AddNumberToFirstList()
+    private void AddNumberToFirstList(int number)
     {
-        _marbles1.Add(new MarbleNumberModel(_number) { Color = Color.Secondary });
-        _number = 0;
-        _showPopover1 = false;
+        _marbles1.Add(new MarbleNumberModel(number) { Color = Color.Secondary });
     }
     
-    private void AddNumberToSecondList()
+    private void AddNumberToSecondList(int number)
     {
-        _marbles2.Add(new MarbleNumberModel(_number) { Color = Color.Secondary });
-        _number = 0;
-        _showPopover2 = false;
+        _marbles2.Add(new MarbleNumberModel(number) { Color = Color.Secondary });
     }
 }
