--- a/LinqMarbles.Client/Pages/SequenceEqual.razor
+++ b/LinqMarbles.Client/Pages/SequenceEqual.razor
@@ -1,4 +1,5 @@
 ﻿@page "/sequence-equal"
+<PageTitle>LINQ Marbles - SequenceEqual</PageTitle>
 
 <PageContainer OperatorText="SequenceEqual()">
     <InputPanel>
