--- a/LinqMarbles.Client/Pages/SequenceEqual.razor
+++ b/LinqMarbles.Client/Pages/SequenceEqual.razor
@@ -1,4 +1,4 @@
-﻿@page "/sequence-equal"
+﻿@attribute [Route(RouteConstant.SequenceEqual)]
 <PageTitle>LINQ Marbles - SequenceEqual</PageTitle>
 
 <PageContainer OperatorText="SequenceEqual()">
